Completed implementation of mobile design

--- a/index.html
+++ b/index.html
@@ -13,12 +13,25 @@
   <title>Frontend Mentor | Base Apparel coming soon page</title>
 </head>
 <body>
-
-  We're coming soon
-
-  Hello fellow shoppers! We're currently building our new fashion store. 
-  Add your email below to stay up-to-date with announcements and our launch deals.
-
-  Email Address
+  <main>
+    <header>
+      <img src="images/logo.svg" alt="Brand logo">
+    </header>
+    <div class="info">
+      <h1><span>We're</span> coming soon</h1>
+      <p>Hello fellow shoppers! We're currently building our new fashion store. 
+        Add your email below to stay up-to-date with announcements and our launch deals.
+      </p>
+      <div class="input-prompt">
+        <input type="email" name="email" id="email" placeholder="Email Address">
+        <button>
+          <svg xmlns="http://www.w3.org/2000/svg" width="12" height="20"><path fill="none" stroke="#FFF" stroke-width="2" d="M1 1l8.836 8.836L1 18.671"/></svg>
+        </button>
+      </div>
+    </div>
+    <div class="image">
+      <img src="images/hero-mobile.jpg" alt="Image of a woman">
+    </div>
+  </main>
 </body>
 </html>
