--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;600&display=swap" rel="stylesheet">
   <title>Frontend Mentor | Base Apparel coming soon page</title>
+  <script src="validate.js" defer></script>
 </head>
 <body>
   <main>
@@ -27,7 +28,9 @@
         <button>
           <svg xmlns="http://www.w3.org/2000/svg" width="12" height="20"><path fill="none" stroke="#FFF" stroke-width="2" d="M1 1l8.836 8.836L1 18.671"/></svg>
         </button>
+        <img class="error-icon error-active" src="images/icon-error.svg" alt="Error icon">
       </div>
+      <p class="error-msg error-active">Error</p>
     </div>
     <div class="image">
       <img src="images/hero-mobile.jpg" alt="Image of a woman">
